add requestoptions to swagger models
