# packages/site/src/api/openapi/apis/ExpensesApi.ts
@@ -17,21 +17,12 @@ import type {
 	ExpenseDto,
 	PaginatedExpenseDto,
 	PartialExpenseDto,
-	SortOrderEnum,
+	QueryOptionsRequestDto,
 	UpdateExpenseDto,
 } from '../models';
 
 export interface ExpensesApiFindAllRequest {
-	page?: number;
-	take?: number;
-	sortOrder?: SortOrderEnum;
-	filter?: object;
-	start?: string;
-	end?: string;
-	orderBy?: string;
-	portfolioId?: string;
-	propertyId?: string;
-	unitId?: string;
+	options?: QueryOptionsRequestDto;
 }
 
 export interface ExpensesApiFindOneRequest {
@@ -152,44 +143,8 @@ export class ExpensesApi
 	): Promise<runtime.ApiResponse<PaginatedExpenseDto>> {
 		const queryParameters: any = {};
 
-		if (requestParameters.page !== undefined) {
-			queryParameters['page'] = requestParameters.page;
-		}
-
-		if (requestParameters.take !== undefined) {
-			queryParameters['take'] = requestParameters.take;
-		}
-
-		if (requestParameters.sortOrder !== undefined) {
-			queryParameters['sortOrder'] = requestParameters.sortOrder;
-		}
-
-		if (requestParameters.filter !== undefined) {
-			queryParameters['filter'] = requestParameters.filter;
-		}
-
-		if (requestParameters.start !== undefined) {
-			queryParameters['start'] = requestParameters.start;
-		}
-
-		if (requestParameters.end !== undefined) {
-			queryParameters['end'] = requestParameters.end;
-		}
-
-		if (requestParameters.orderBy !== undefined) {
-			queryParameters['orderBy'] = requestParameters.orderBy;
-		}
-
-		if (requestParameters.portfolioId !== undefined) {
-			queryParameters['portfolioId'] = requestParameters.portfolioId;
-		}
-
-		if (requestParameters.propertyId !== undefined) {
-			queryParameters['propertyId'] = requestParameters.propertyId;
-		}
-
-		if (requestParameters.unitId !== undefined) {
-			queryParameters['unitId'] = requestParameters.unitId;
+		if (requestParameters.options !== undefined) {
+			queryParameters['options'] = requestParameters.options;
 		}
 
 		const headerParameters: runtime.HTTPHeaders = {};
